# panes

./: .editorconfig  .gitignore  .release-it.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX_EXECUTION_POLICY_DEEP_DIVE.md  CONTRIBUTING.md  PERFORMANCE_PLANO.md  PRODUCT.md  README.md  README.pt-BR.md  com.panes.app.yml  index.html  latest.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vercel.json  vite.config.ts
.claude/: settings.local.json
.github/: dependabot.yml
brand/: APP_INTEGRATION.md  README.md  brand-kit.html  tokens.css  tokens.json
docs/: PLANO_COMPLETO.md  homebrew-distribution.md
flatpak/: README.md  com.panes.app.desktop  com.panes.app.metainfo.xml  mise-env.sh  panes-wrapper.sh
landing-page/: i18n.js  index.html  style.css  vercel.json
remotion/: AGENTS.md  package.json  tsconfig.json
scripts/: build-claude-sidecar.mjs  build-desktop.mjs  check-codex-app-server-parity.mjs  claude-sidecar-staging.mjs  generate-update-manifest.mjs  prune-local-artifacts.mjs  should-release.mjs  sync-versions.mjs
src/: App.tsx  globals.css  main.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.bundle-check.conf.json
src-tauri/crates/transcription/: Cargo.toml
src-tauri/crates/transcription/src/: lib.rs
tests/: MarkdownContent.test.tsx  TESTING.md  chatStore.test.ts  claudeAgentSidecar.test.ts  claudeSidecarStaging.test.mjs  homebrewCask.test.ts  markdownParserCore.test.ts  parseDiff.test.ts  perfTelemetry.test.ts  terminalStore.test.ts  threadStore.test.ts  toastStore.test.ts  (+3 more)
(+311 files in other folders)
