[package]
name = "panes-transcription"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Panes transcription layer — Transcriber trait and whisper.cpp-backed implementation"

[dependencies]
anyhow = "1"
async-trait = "0.1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
whisper-rs = { version = "0.16", features = ["metal"] }
hound = "3.5"

[[bin]]
name = "transcribe"
path = "src/bin/transcribe.rs"
